v0.4.9-1 - fix IE data-binding and docs layout issues

--- a/docs/ui/widgets/zuix_hackbox.css
+++ b/docs/ui/widgets/zuix_hackbox.css
@@ -66,7 +66,6 @@ div[data-ui-field=debug-log] {
     font-size:70%;
     font-family: monospace;
     text-align: left;
-    width: 100%;
 }
 a[data-ui-field="components"] {
     overflow: visible;
